test/config/policy-one/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: PolicyOne
metadata:
  name: policyone
